--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
   height: 100vh;
 }
 header {
-  min-height: 12%;
-  background-color: #ffffff !important;
+height: 80px;
+
+background-color: #ffffff !important;
   border-bottom: 1px solid #a0a0a0;
 }
 main {
